force-app/main/default/objects/Product2/fields/AnnualFee__c.field-meta.xml
<CustomField>
    <fullName>AnnualFee__c</fullName>
    <label>AnnualFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>