force-app/main/default/objects/Product2/fields/CardBrand__c.field-meta.xml
<CustomField>
    <fullName>CardBrand__c</fullName>
    <label>CardBrand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Card_Brand</valueSetName>
    </valueSet>
</CustomField>