force-app/main/default/objects/Product2/fields/MaxCreditLine__c.field-meta.xml
<CustomField>
    <fullName>MaxCreditLine__c</fullName>
    <label>MaxCreditLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>