force-app/main/default/objects/Product2/fields/MinCreditLine__c.field-meta.xml
<CustomField>
    <fullName>MinCreditLine__c</fullName>
    <label>MinCreditLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>