force-app/main/default/objects/Product2/fields/ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductStatus__c</fullName>
    <label>ProductStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>